# orion-exchange-elrond

./: Cargo.toml  LICENSE
contracts/exchange/: Cargo.toml  README.md
contracts/exchange/src/: events.rs  lib.rs  order.rs  order_status.rs  token_proxy.rs  trade.rs  transfer_proxy.rs
contracts/exchange/test/: deposit-asset-insufficient-token-balance.scen.json  deposit-asset.json  deposit-asset.scen.json  deposit-erd.scen.json  init-agent-1.steps.json  init-agent-2.steps.json  init-exchange-with-balances.steps.json  init-exchange.steps.json  init-single-agent.json  init-single-agent.steps.json  init-token-with-allowance.steps.json  withdraw-erd-insufficient-balance.scen.json  withdraw-erd.scen.json
contracts/exchange/test/ERD-transfers/: deposit-erd.scen.json  withdraw-erd-insufficient-balance.scen.json  withdraw-erd.scen.json
contracts/exchange/test/orders/: validate-order.scen.json
contracts/exchange/test/token-transfers/: deposit-token-insufficient-balance.scen.json  deposit-token.scen.json  withdraw-token-insufficient-balance.scen.json  withdraw-token.scen.json
contracts/exchange/wasm/: Cargo.toml
contracts/exchange/wasm/src/: lib.rs
contracts/token/: Cargo.toml  README.md
contracts/token/src/: lib.rs
contracts/token/test/erc20/: allowance_CallerCaller.scen.json  allowance_CallerOther.scen.json  allowance_OtherCaller.scen.json  allowance_OtherEqOther.scen.json  allowance_OtherNEqOther.scen.json  approve_Caller-Positive.scen.json  approve_Caller-Zero.scen.json  approve_Other-Positive.scen.json  approve_Other-Zero.scen.json  approve_SwitchCaller.scen.json  balanceOf_Caller.scen.json  balanceOf_NonCaller.scen.json  not_payable.scen.json  totalSupply_Positive.scen.json  totalSupply_Zero.scen.json  transferFrom_AllDistinct-BalanceEqAllowance.scen.json  transferFrom_AllDistinct-BalanceNEqAllowance.scen.json  transferFrom_AllDistinct-EntireAllowanceMoreThanBalance.scen.json  transferFrom_AllDistinct-EntireBalanceEqAllowance.scen.json  transferFrom_AllDistinct-EntireBalanceMoreThanAllowance.scen.json  transferFrom_AllDistinct-MoreThanAllowanceLessThanBalance.scen.json  transferFrom_AllDistinct-MoreThanBalanceLessThanAllowance.scen.json  transferFrom_AllDistinct-NoOverflow.scen.json  transferFrom_AllDistinct-StillNoOverflow.scen.json  transferFrom_AllEqual-AllowanceRelevant.scen.json  transferFrom_AllEqual-EntireBalance.scen.json  transferFrom_CallerEqFrom-AllowanceRelevant.scen.json  transferFrom_CallerEqFrom-EntireBalance.scen.json  transferFrom_CallerEqFrom-MoreThanBalance.scen.json  transferFrom_CallerEqTo-BalanceNEqAllowance.scen.json  transferFrom_CallerEqTo-MoreThanAllowanceLessThanBalance.scen.json  transferFrom_CallerEqTo-MoreThanBalanceLessThanAllowance.scen.json  transferFrom_Exploratory-MultipleTransfersSucceed.scen.json  transferFrom_Exploratory-MultipleTransfersThrow.scen.json  transferFrom_FromEqTo-BalanceEqAllowance.scen.json  (+21 more)
contracts/token/wasm/: Cargo.toml
docs/: README.md
rust-tests/: Cargo.toml
rust-tests/src/: call_builder.rs  contract.rs  lib.rs
rust-tests/tests/: ownable.rs  token.rs
scripts/: build-and-test.sh
(+4 files in other folders)
