[package]
name = "orion-exchange-elrond"
version = "0.1.0"
authors = ["Willem Olding <willemolding@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "orion-exchange-elrond"
path = "src/lib.rs"

[dependencies]

common = { path = "../common" }

elrond-wasm = "0.5.4"
elrond-wasm-node = "0.5.4"
elrond-wasm-derive = "0.5.4"
elrond-codec = "0.1.1"
