[package]
name = "orion-exchange-elrond"
version = "0.1.0"
authors = ["Willem Olding <willemolding@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }

elrond-wasm = "0.6.0"
elrond-wasm-node = "0.6.0"
elrond-wasm-derive = "0.6.0"
elrond-codec = "0.1.2"
elrond-wasm-output = { version="0.6.0", features=["wasm-output-mode"]}
