[package]
name = "orion-token-elrond"
version = "0.1.0"
authors = ["Willem Olding <willemolding@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "orion-token-elrond"
path = "src/lib.rs"

[dependencies]
elrond-wasm = "0.5.2"
elrond-wasm-node = "0.5.2"
elrond-wasm-derive = "0.5.2"
