[package]
name = "orion-exchange-elrond-wasm"
version = "0.1.0"
authors = ["Willem Olding <willemolding@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies]
orion-exchange-elrond = { path = ".." }
elrond-wasm-output = { version = "0.6.0", features=["wasm-output-mode"]}

[workspace]
